// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Columns component should have columns one column half width and 3 other as default 1`] = `
<DocumentFragment>
  <div
    class="columns"
  >
    <div
      class="column is-6"
    >
      1
    </div>
    <div
      class="column"
    >
      2
    </div>
    <div
      class="column"
    >
      3
    </div>
    <div
      class="column"
    >
      4
    </div>
  </div>
</DocumentFragment>
`;

exports[`Columns component should have columns one column half width, other narrow and 2 other as default 1`] = `
<DocumentFragment>
  <div
    class="columns"
  >
    <div
      class="column is-6"
    >
      1
    </div>
    <div
      class="column is-narrow"
    >
      2
    </div>
    <div
      class="column"
    >
      3
    </div>
    <div
      class="column"
    >
      4
    </div>
  </div>
</DocumentFragment>
`;

exports[`Columns component should render 1`] = `
<DocumentFragment>
  <div
    class="columns"
  />
</DocumentFragment>
`;

exports[`Columns component should render 2`] = `
<DocumentFragment>
  <div
    class="column"
  />
</DocumentFragment>
`;

exports[`Columns component should render as paragraph 1`] = `
<DocumentFragment>
  <div
    class="columns"
  >
    <p
      class="column is-6"
    >
      1
    </p>
    <p
      class="column"
    >
      2
    </p>
    <p
      class="column"
    >
      3
    </p>
    <p
      class="column"
    >
      4
    </p>
  </div>
</DocumentFragment>
`;
